# graphify-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_CN.md  SECURITY.md  graphify.toml  skill.md
.github/workflows/: ci.yml
benches/: graphify_bench.rs
crates/graphify-analyze/: Cargo.toml
crates/graphify-analyze/src/: embedding.rs  lib.rs  temporal.rs
crates/graphify-benchmark/: Cargo.toml
crates/graphify-benchmark/src/: lib.rs
crates/graphify-build/: Cargo.toml
crates/graphify-build/src/: lib.rs
crates/graphify-cache/: Cargo.toml
crates/graphify-cache/src/: lib.rs
crates/graphify-cluster/: Cargo.toml
crates/graphify-cluster/src/: lib.rs
crates/graphify-core/: Cargo.toml
crates/graphify-core/src/: confidence.rs  error.rs  graph.rs  id.rs  lib.rs  model.rs  quality.rs
crates/graphify-detect/: Cargo.toml
crates/graphify-detect/src/: classify.rs  constants.rs  ignore.rs  lib.rs  sensitive.rs
crates/graphify-embed/: Cargo.toml
crates/graphify-embed/src/: lib.rs
crates/graphify-export/: Cargo.toml
crates/graphify-export/src/: context.rs  cypher.rs  graphml.rs  html.rs  html_templates.rs  json.rs  lib.rs  obsidian.rs  report.rs  svg.rs  wiki.rs
crates/graphify-extract/: Cargo.toml
crates/graphify-extract/src/: ast_extract.rs  dedup.rs  doc_extract.rs  lang_config.rs  lib.rs  parser.rs  semantic.rs  sql_extract.rs  tests.rs  treesitter.rs
crates/graphify-extract/src/ast_extract/: mod.rs
crates/graphify-extract/src/semantic/: anthropic.rs  anthropic_oauth.rs  openai_compat.rs
crates/graphify-extract/src/treesitter/: handlers.rs  mod.rs
crates/graphify-extract/tests/: ast_extract.rs  cross_file.rs  treesitter.rs
crates/graphify-hooks/: Cargo.toml
crates/graphify-hooks/src/: lib.rs
crates/graphify-ingest/: Cargo.toml
crates/graphify-ingest/src/: lib.rs
crates/graphify-security/: Cargo.toml
crates/graphify-security/src/: label_validator.rs  lib.rs  path_validator.rs  url_validator.rs
crates/graphify-serve/: Cargo.toml
crates/graphify-serve/src/: format.rs  http.rs  lib.rs  mcp.rs
crates/graphify-serve/src/mcp/: handlers.rs  mod.rs  tools.rs
crates/graphify-watch/: Cargo.toml
crates/graphify-watch/src/: lib.rs
docs/: ARCHITECTURE.md  CLI.md  CLI_CN.md  GRAPHIFY_ORIGINAL_COMPARISON.md
docs/superpowers/plans/: 2026-05-13-llm-provider-support.md  2026-05-18-extraction-and-quality-improvements.md
docs/superpowers/specs/: 2026-05-13-llm-provider-support-design.md
examples/: build_and_query.rs  custom_graph.rs
skills/: README.md
skills/claude/graphify/: SKILL.md
skills/codex/graphify/: SKILL.md
src/: cmd_build.rs  config.rs  install.rs  llm.rs  main.rs  skill.rs
tests/integration/: test_e2e.rs  test_python_compat.rs
