[package]
name = "graphify-benchmark"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Token efficiency benchmarking for graphify"

[dependencies]
graphify-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
