[package]
name = "graphify-build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Graph assembly and deduplication for graphify"

[dependencies]
graphify-core.workspace = true
petgraph.workspace = true
tracing.workspace = true
thiserror.workspace = true
