[package]
name = "graphify-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SHA256-based semantic caching for graphify"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
