[package]
name = "graphify-cluster"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Community detection (Leiden/Louvain) for graphify"

[dependencies]
graphify-core.workspace = true
petgraph.workspace = true
tracing.workspace = true
thiserror.workspace = true
rand = "0.8"
