[package]
name = "graphify-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core data models and graph operations for graphify"

[dependencies]
serde.workspace = true
serde_json.workspace = true
petgraph.workspace = true
thiserror.workspace = true
tracing.workspace = true
