[package]
name = "graphify-embed"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Semantic embedding index for graphify knowledge graphs"

[dependencies]
graphify-core.workspace = true
anyhow.workspace = true
model2vec-rs = { version = "0.1.4", default-features = false, features = ["fancy-regex"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile = "3"
