[package]
name = "graphify-export"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-format export (JSON, HTML, SVG, GraphML, Cypher) for graphify"

[dependencies]
graphify-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
minijinja = "2"

[dev-dependencies]
tempfile = "3"
