[package]
name = "graphify-hooks"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Git hook integration for graphify"

[dependencies]
graphify-core.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"
