[package]
name = "graphify-serve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for graph queries"

[dependencies]
graphify-core.workspace = true
graphify-analyze.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
reqwest.workspace = true
tempfile = "3"
